tests/rosetta/out/Rust/chat-server.error
rustc: exit status 1
error: mismatched closing delimiter: `}`
  --> /tmp/chat-server.rs:19:22
   |
17 |         let add = move |name: &'static str| -> () {
   |                                                   - closing delimiter possibly meant for this
18 |             clients = { let mut tmp = clients.clone(); tmp.push(name); tmp };
19 |             broadcast(format!("{}{}", format!("{}{}", "+++ "", name), "" connected +++
   |                      ^ unclosed delimiter
20 | "));
21 |         };
   |         ^ mismatched closing delimiter

error: mismatched closing delimiter: `}`
  --> /tmp/chat-server.rs:28:22
   |
26 |         let remove = move |name: &'static str| -> () {
   |                                                      - closing delimiter possibly meant for this
27 |             clients = removeName(clients, name);
28 |             broadcast(format!("{}{}", format!("{}{}", "--- "", name), "" disconnected ---
   |                      ^ unclosed delimiter
29 | "));
30 |         };
   |         ^ mismatched closing delimiter

error: aborting due to 2 previous errors

